img, svg - fix default vertical-align

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -81,7 +81,7 @@ svg {
   display: inline-block;
   height: auto;
   max-width: 100%;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 fieldset {
